# ManInTheJungle

./: .gitignore  .makefile.swp  CMakeLists.txt  First_game  README.md  makefile  tx.txt
Bugs/: log.txt
config/: Readme.docx  readme.txt  ~$Readme.docx  ~WRL0005.tmp
config/levels/: levelHeader.cfg
example/: test1.cpp
include/: BackgroundObject.h  characterObject.h  customTypes.h  eventManager.h  gameController.h  globalSettings.h  gravitation.h  jungleObject.h  levelLoader.h  objectManager.h  rednerMachine.h  renderObject.h  textureStateManager.h
scripts/: levelHandler.py
src/: BackgroundObject.cpp  characterObject.cpp  eventManager.cpp  gameController.cpp  gravitation.cpp  jungleObject.cpp  levelLoader.cpp  main.cpp  objectManager.cpp  rednerMachine.cpp  renderObject.cpp
